style.css
* {
    font-family: "Inter", 'Poppins';
    padding : 0;
    margin : 0;
    box-sizing: border-box;
}

a, a:visited, a:hover, a:active {
  text-decoration: none;
}

*figure {
  user-select: none;
}

*img {
  user-select: none;
}

:root {
    --soft-orange : hsl(35, 77%, 62%);
    --soft-red : hsl(5, 85%, 63%);

    --off-white : hsl(36, 100%, 99%);
    --grayish-blue : hsl(233, 8%, 79%);
    --dark-grayish-blue: hsl(236, 13%, 42%);
    --very-dark-blue: hsl(240, 100%, 5%);
}

.unselectable {
  user-select: none;
}

.attribution {
  font-size: 13px; text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

body {
  background-color: var(--off-white);

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;

  width: 100%;
  min-height: 100svh;
  padding: 5%;
}

header {
  width: 100%;

  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 50px;
}

.header-logo-fig {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;

  height: 100%;
  user-select: none;
}

.header-logo-img {
  height: 100%;
  width: 100%;
}

.header-linkslist {
  display: flex;
  justify-content: space-between;
  align-items: center;

  gap: 50px;
}

.header-link {
  color: var(--dark-grayish-blue);
  font-size: 1.1rem;
  transition: all 0.3s ease-out ;
}

.header-link:hover {
  color: var(--soft-orange);
}

.burgermenu-openclose-button {
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;

  overflow: hidden;
}

.burgermenu-openclose-button > img {
  height: 100%;
}

#burgermenu-page {
  background-color: white;
  width: 75%;
  height: 100%;

  position: fixed;
  z-index: 5;
  top: 0;
  right: 0;

  display: flex;
  align-items: center;

  padding: 20px;
}

.burgermenu-page-list {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.burgermenu-page-list-link {
  color: var(--very-dark-blue);
  font-size: 1.6rem;
}

#burgermenu-closebutton {
  position: absolute;
  top: 20px;
  right: 20px;

  height: 40px;
  aspect-ratio: 1/1;
}

main {
  width: 100%;

  display: flex;
  flex-direction: column;
  align-items: center;

  gap: 50px;
}

.topnews {
  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  height: 50svh;
  min-height: 350px;
}

.bignews {
  width: 70%;
  height: 100%;

  padding: 0 30px 0 0;

  display: flex;
  flex-direction: column;
  align-items: center;

  gap: 20px;
}

.bignews-fig {
  width: 100%;
  height: 60%;
  
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;

  user-select: none;
}

.bignews-img {
  min-height: 100%;
  width: 100%;
}

.bignews-details {
  height: 40%;
  width: 100%;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.bignews-title {
  font-size: 3.85rem;
  font-weight: 800;
  width: 45%;
}

.bignews-description {
  height: 100%;
  width: 50%;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.bignews-description-text {
  color: var(--dark-grayish-blue);
  font-size: 1.25rem;
  line-height: 30px;
  text-align: justify;
}

.bignews-description-button {
  background-color: var(--soft-red);

  width: 200px;
  height: 50px;

  display: flex;
  justify-content: center;
  align-items: center;

  user-select: none;

  transition: all 0.3s ease-out ;
}

.bignews-description-button:hover {
  background-color: var(--very-dark-blue);
}

.bignews-description-button-text {
  color: white;
  font-size: 0.9;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.newslist {
  height: 100%;
  width: 30%;

  padding: 25px;

  display: flex;
  flex-direction: column;
  justify-content: space-around;

  background-color: var(--very-dark-blue);
}

.newslist-title {
  color: var(--soft-orange);
  font-size: 2.5rem;
  font-weight: 600;
}

.newslist-card {
  height: 20%;
  width: 100%;

  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.newslist-card-title {
  color: var(--off-white);
  font-size: 1.35rem;

  transition: all 0.3s ease-out;
}

.newslist-card-title:hover {
  color: var(--soft-orange);
}

.newslist-card-description {
  color: var(--grayish-blue);
  font-size: 0.9rem;
  font-weight: 300;
}

.bottomnews {
  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 15svh;
  min-height: 100px;
}

.bottomnews-card {
  width: 30%;
  height: 100%;
  
  display: flex;
  justify-content: space-between;
  align-items: center;

  overflow: hidden;
}

.bottomnews-card-fig {
  height: 100%;
  width: 30%;

  display: flex;
  justify-content: center;
  align-items: center;

  overflow: hidden;
  user-select: none;
}

.bottomnews-card-img {
  min-height: 100%;
  width: 100%;
}

.bottomnews-card-details {
  width: 65%;
  height: 100%;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.bottomnews-card-number {
  color: var(--grayish-blue);
  font-size: 2rem;
  font-weight: 700;
}

.bottomnews-card-title {
  color: var(--very-dark-blue);
  font-size: 1.3rem;

  transition: all 0.3s ease-out;
}

.bottomnews-card-title:hover {
  color: var(--soft-red);
}

.bottomnews-card-description {
  color: var(--dark-grayish-blue);
  font-size: 0.95rem;
  line-height: 25px;
  letter-spacing: 1px;
}

@media screen and (max-width: 1920px) {

}

@media screen and (max-width: 1600px) {
  body {
    padding: 3.5%;
  }

  .bignews-title {
    font-size: 2.8rem;
  }

  .bignews-description-text {
    font-size: 1rem;
    line-height: 20px;
  }
}

@media screen and (max-width: 1280px) {
  body {
    padding: 30px;
  }

  .bignews-title {
    font-size: 2.5rem;
  }

  .bignews-description-button {
    width: 150px;
    height: 45px;
  }

  .bignews-description-button-text {
    font-size: 0.95rem;
  }

  .newslist {
    padding: 15px;
  }

  .newslist-title {
    font-size: 1.6rem;
  }

  .newslist-card-title {
    font-size: 1.2rem;
  }
  
  .newslist-card-description {
    font-size: 0.8rem;
  }

  .bottomnews-card-number {
    font-size: 1.5rem;
  }
  
  .bottomnews-card-title {
    font-size: 1.1rem;
  }
  
  .bottomnews-card-description {
    font-size: 0.85rem;
    line-height: 20px;
    letter-spacing: normal;
  }
}

/* Mobile design from here */
@media screen and (max-width: 1000px) {
  body {
    justify-content: unset;
    gap: 30px;

    padding: 15px;
  }

  main {
    display: flex;
    flex-direction: column;
    align-items: center;

    gap: 30px;
  }

  .topnews {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;

    justify-content: unset;
    height: unset;
  }

  .bignews {
    width: 100%;

    padding: 0;
  }

  .bignews-details {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: unset;

    gap: 15px;

    width: 100%;
  }

  .bignews-title {
    font-size: 3.5rem;
    width: 100%;
  }

  .bignews-description {
    display: flex;
    flex-direction: column;
    justify-content: unset;

    gap: 15px;

    width: 100%;
  }

  .bignews-description-text {
    font-size: 1.2rem;
    line-height: 25px;
  }

  .newslist {
    width: 100%;
    flex-direction: column;
    gap: 30px;

    justify-content: unset;

    padding: 30px 20px;
  }

  .newslist-title {
    font-size: 2.5rem;
  }

  .newslist-card {
    justify-content: unset;
    gap: 10px;
  }

  .newslist-card-title {
    font-size: 1.3rem;
  }

  .newslist-card-description {
    font-size: 1rem;
  }

  .bottomnews {
    width: 100%;
    height: unset;

    display: flex;
    flex-direction: column;
    align-items: center;

    gap: 15px;
  }

  .bottomnews-card {
    width: 100%;
    height: 125px;
  }

  .bottomnews-card-fig {
    width: 25%;
  }

  .bottomnews-card-details {
    width: 70%;
  }

  .bottomnews-card-number {
    font-size: 2rem;
  }
  
  .bottomnews-card-title {
    font-size: 1.35rem;
  }
  
  .bottomnews-card-description {
    font-size: 1rem;
    line-height: 25px;
    letter-spacing: normal;
  }
}

/* Mobile design from here */
@media screen and (max-width: 400px) {
  body {
    padding: 10px;
  }

  .bignews-title {
    font-size: 3rem;
    width: 100%;
  }

  .bignews-description-text {
    font-size: 1.1rem;
    line-height: 20px;
  }

  .newslist-title {
    font-size: 2rem;
  }

  .newslist-card-title {
    font-size: 1.15rem;
  }

  .newslist-card-description {
    font-size: 0.9rem;
  }

  .bottomnews-card-fig {
    width: 30%;
  }

  .bottomnews-card-details {
    width: 65%;
  }

  .bottomnews-card-number {
    font-size: 1.8rem;
  }
  
  .bottomnews-card-title {
    font-size: 1.15rem;
  }
  
  .bottomnews-card-description {
    font-size: 0.9rem;
    line-height: 15px;
  }

  .burgermenu-page-list-link {
    font-size: 1.25rem;
  }
}

